<resources>
    <string name="app_name">ArgeMemory</string>
    <string name="rememberme">Beni Hatırla</string>
    <string name="kullanici_adi">KULLANICI ADI</string>
    <string name="sifre">ŞİFRE</string>
    <string name="giris">GİRİŞ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">ara</string>
    <string name="save">kaydet</string>
    <string name="email">email</string>
    <string name="login">Giriş</string>
    <string name="pano">Pano</string>
    <string name="lang">dil</string>
    <string name="tag_content">menü</string>
    <string name="Department">Departman</string>
    <string name="personel">Personel</string>
    <string name="tag">Etiket</string>
    <string name="task">İçerik</string>
    <string name="writesomething">Bir Şeyler Yazın...</string>
    <string name="btnOk">KAYDET</string>
    <string name="cancel">İPTAL</string>
    <string name="all">Hepsini Seç</string>
    <string name="tamam">TAMAM</string>
    <string name="btnall">Hepsini Seç</string>
    <string name="title_activity_share_tab">ShareTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="share_activity">Paylaşım</string>
    <string name="addtag">Yeni Etiket</string>
    <string name="add">EKLE</string>
    <string name="iptal">İPTAL</string>
    <string name="geri">GERİ</string>
    <string name="devam">DEVAM</string>
    <string name="share">Paylaşım</string>
    <string name="dil">Dil</string>
    <string name="listoftask">GÖREV LİSTESİ</string>
    <string name="dep_activity">Departman Seçimi</string>
    <string name="pers_activity">Personel Seçimi</string>
    <string name="tag_activity">Etiket Seçimi</string>
    <string name="makeshare">Paylaşım Yap</string>
    <string name="showallshare">Paylaşımları Gör</string>
    <string name="select_date">Tarih Seç</string>
    <string name="select_time">Saat Seç</string>
    <string name="sharing">Paylaşımlar</string>
    <string name="startdate">Baş. Tarihi</string>
    <string name="enddate">Bitiş Tarihi</string>
    <string name="txtsharing">Yapılan Paylaşımlar</string>
    <string name="updatedescp">Açıklamayı Güncelle</string>
    <string name="crash">Beklenmeyen Bir Hata Oluştu:(</string>
    <string name="raporet">Rapor Et</string>
    <string name="raporetme">Kapat</string>
    <string name="commnets">Yorumlar</string>
    <string name="yorumyap">Paylaş</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="menuList">
        <item>Anasayfa</item>
        <item>Profil</item>
        <item>Görev Paylaş</item>
        <item>Paylaşımlar</item>
        <item>Mesajlar</item>
        <item>Bildirimler</item>
        <item>Ayarlar</item>
        <item>Çıkış</item>
    </string-array>


    <string-array name="menuIconList">

        <item>@drawable/home</item>
        <item>@drawable/profile</item>
        <item>@drawable/sharetask</item>
        <item>@drawable/getsharetask</item>
        <item>@drawable/message</item>
        <item>@drawable/notification</item>
        <item>@drawable/settings</item>
        <item>@drawable/exit</item>

    </string-array>


</resources>
